2006-03-28  Don Allingham  <don@gramps-project.org>
	* src/Mime/_GnomeMime.py: find the default application instead of 
	using the first returned by mime_get_app_short_list

2006-03-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py (_PersonWidget_base): Use other name for
	the drag_begin callback to not conflict with a gtk.Widget internal method.

2006-03-26  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PedigreeView.py: start of dnd-icon - not working yet
	* src/DataViews/_PersonView.py: set dnd icon
	* src/PageView.py: set dnd icon

2006-03-25  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Add DnD support to the person boxes;
	copy person data into clipboard; Open FamilyEditor to add missing
	parents

2006-03-24  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: handle single parent families on 
	family switch with adding parents
	* src/Editors/Makefile.am: added _EditRepoRef.py
	* src/Editors/_EditRepoRef.py: Added

2006-03-23  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: fix arglist to save, handle add parent
	family switching.
	* src/DataViews/_FamilyView.py: don't use LinkLabel for unknown
	parent

2006-03-23  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DdTargets.py,
	* src/DisplayTabs.py,
	* src/ScratchPad.py: Support Location DnD

2006-03-22  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/ScratchPad.py: Filter double drops in Windows.

2006-03-22  Don Allingham  <don@gramps-project.org>
	* src/ScratchPad.py: handle repositories
	* 
	* src/DataViews/_SourceView.py: handle drag and drop
	* src/DataViews/_PersonView.py: handle drag and drop
	* src/ViewManager.py: pychecker fixes
	* src/RelLib/_Person.py: pychecker fixes
	* src/RelLib/_Date.py: pychecker fixes
	* src/RelLib/_Family.py: pychecker fixes
	* src/RelLib/_Note.py: pychecker fixes
	* src/RelLib/_EventRef.py: pychecker fixes
	* src/PeopleModel.py: pychecker fixes